--- a/darktone-calendar.css
+++ b/darktone-calendar.css
@@ -15,6 +15,7 @@
 .calendar-table {
   background: #4c4c4c;
   float: left;
+  margin: 0;
   font-size: 1em;
   border-radius: 5px;
   box-shadow: 0 1px 2px #7f7f7f;
