--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
   color: white
 }
 
+.calendar-table thead td.prev a:hover,
+.calendar-table thead td.next a:hover,
 .calendar-table tbody td a:hover,
 .calendar-table tbody td a.prev-day:hover,
 .calendar-table tbody td a.next-day:hover {
@@ -48,6 +50,7 @@
   padding: 0
 }
 
+.calendar-table thead td a,
 .calendar-table tbody td a {
   color: white;
   border: 1px solid #4c4c4c
