--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@
   font-size: 1em
 }
 
+.popover-title {
+  background: #4c4c4c;
+  color: white;
+  padding: 10px 0;
+  text-align: center
+}
+
 .calendar a {
   display: block;
   padding: 5px;
